--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Gmail</a></li>
+                <li><a href="">imagenes</a></li>
+                <li><a href="">Icon</a></li>
+                <li><a href="">Photo</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
