8. Manejo de iconos e imagenes en el header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <ul class="nav-right-section">
                 <li><a href="">Gmail</a></li>
                 <li><a href="">imagenes</a></li>
-                <li><a href="">Icon</a></li>
-                <li><a href="">Photo</a></li>
+                <li class="menu-icon"><a href=""></a></li>
+                <li><a href=""><img src="https://lh3.googleusercontent.com/-jUy6Kf6aKOs/AAAAAAAAAAI/AAAAAAAAAAA/AKF05nDoDNdhASuMXXuQTlNjsHxqHPULrg.CMID/s32-c/photo.jpg" alt="imagen de perfil"></a></li>
             </ul>
         </nav>
     </header>
