--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <section class="main-logo"><img src="" alt="">   </section>
+        <section class="main-logo"><img src="https://img.pngio.com/google-logo-2015-png-image-purepng-free-transparent-cc0-png-google-logo-transparent-10000_3382.png" alt="">   </section>
         <section class="main-input">
             <div class="main-input-container">
                 <span class="search-icon"></span>
