15. Se agregan estilos al footer

--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
     </main>
     <footer>
         <div class="ubicacion">
-            Colombia
+            <p>Colombia</p>   
         </div>
-        <ul class="footer-left"> 
-            <li><a href="">Publicidad</a></li>
-            <li><a href="">Negocios</a></li>
-            <li><a href="">Sobre Google</a></li>
-            <li><a href="">Cómo funciona la Búsqueda</a></li>
-        </ul>
-        <ul class="footer-right">
-            <li><a href="">Privacidad</a></li>
-            <li><a href="">Condiciones</a></li>
-            <li><a href="">Preferencias</a></li>
-        </ul>
+        <div class="grid">
+            <ul class="footer-left"> 
+                <li><a href="">Publicidad</a></li>
+                <li><a href="">Negocios</a></li>
+                <li><a href="">Sobre Google</a></li>
+                <li><a href="">Cómo funciona la Búsqueda</a></li>
+            </ul>
+            <ul class="footer-right">
+                <li><a href="">Privacidad</a></li>
+                <li><a href="">Condiciones</a></li>
+                <li><a href="">Preferencias</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
